--- a/roles/kubernetes-apps/container_engine_accelerator/nvidia_gpu/templates/k8s-device-plugin-nvidia-daemonset.yml.j2
+++ b/roles/kubernetes-apps/container_engine_accelerator/nvidia_gpu/templates/k8s-device-plugin-nvidia-daemonset.yml.j2
@@ -1,19 +1,27 @@
-apiVersion: apps/v1
+# Copyright 2017 Google Inc. All rights reserved.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
-  name: nvidia-gpu-device-plugin
+  name: nvidia-driver-installer
   namespace: kube-system
-  labels:
-    k8s-app: nvidia-gpu-device-plugin
-    addonmanager.kubernetes.io/mode: Reconcile
 spec:
-  selector:
-    matchLabels:
-      k8s-app: nvidia-gpu-device-plugin
   template:
     metadata:
       labels:
-        k8s-app: nvidia-gpu-device-plugin
+        name: nvidia-driver-installer
     spec:
       priorityClassName: system-node-critical
       affinity:
@@ -24,36 +32,47 @@ spec:
               - key: "nvidia.com/gpu"
                 operator: Exists
       tolerations:
-      - operator: "Exists"
-        effect: "NoExecute"
-      - operator: "Exists"
+      - key: "nvidia.com/gpu"
         effect: "NoSchedule"
+        operator: "Exists"
       hostNetwork: true
       hostPID: true
       volumes:
-      - name: device-plugin
-        hostPath:
-          path: /var/lib/kubelet/device-plugins
       - name: dev
         hostPath:
           path: /dev
-      containers:
-      - image: "k8s.gcr.io/nvidia-gpu-device-plugin@sha256:0842734032018be107fa2490c98156992911e3e1f2a21e059ff0105b07dd8e9e"
-        command: ["/usr/bin/nvidia-gpu-device-plugin", "-logtostderr"]
-        name: nvidia-gpu-device-plugin
+      - name: nvidia-install-dir-host
+        hostPath:
+          path: /home/kubernetes/bin/nvidia
+      - name: root-mount
+        hostPath:
+          path: /
+      initContainers:
+      - image: "{{nvidia_driver_install_container}}"
+        name: nvidia-driver-installer
         resources:
           requests:
-            cpu: 50m
-            memory: 10Mi
-          limits:
-            cpu: 50m
-            memory: 10Mi
+            cpu: 0.15
         securityContext:
           privileged: true
+        env:
+          - name: NVIDIA_INSTALL_DIR_HOST
+            value: /home/kubernetes/bin/nvidia
+          - name: NVIDIA_INSTALL_DIR_CONTAINER
+            value: /usr/local/nvidia
+          - name: ROOT_MOUNT_DIR
+            value: /root
+          - name: NVIDIA_DRIVER_VERSION
+            value: "{{nvidia_driver_version}}"
+          - name: NVIDIA_DRIVER_DOWNLOAD_URL
+            value: "{{nvidia_driver_download_url_default}}"
         volumeMounts:
-        - name: device-plugin
-          mountPath: /device-plugin
+        - name: nvidia-install-dir-host
+          mountPath: /usr/local/nvidia
         - name: dev
           mountPath: /dev
-  updateStrategy:
-    type: RollingUpdate
+        - name: root-mount
+          mountPath: /root
+      containers:
+      - image: "gcr.akscn.io/google-containers/pause:2.0"
+        name: pause
